# curlinho

./: .gitignore  CMakeLists.txt  README.md
dependencies/include/curl/: curl.h  curlver.h
dependencies/include/nghttp2/: nghttp2ver.h
dependencies/include/openssl/: asn1.h  asn1t.h  bio.h  cmp.h  cms.h  conf.h  configuration.h  core_names.h  crmf.h  crypto.h  ct.h  ess.h  fipskey.h  ocsp.h  opensslconf.h  opensslv.h  pkcs12.h  pkcs7.h  safestack.h  srp.h  ssl.h  ui.h  x509.h  x509_vfy.h  x509v3.h
dependencies/include/plog/: WinApi.h
dependencies/include/plog/Appenders/: ColorConsoleAppender.h
dependencies/libs/MSVC/x64/: libcurl.lib  libssl.lib  nghttp2.lib  zlib.lib
dependencies/libs/MSVC/x86/: libcurl.lib  libssl.lib  nghttp2.lib  nghttp2_static.lib  zlib.lib
examples/: CMakeLists.txt  curlinho-examples.cbp  curlinhoSample.cpp
examples/mac/: CMakeLists.txt  MacSample.cpp
examples/windows/: CMakeLists.txt  WinSample.cpp
include/curlinho/: auth.h  body.h  certfile.h  certificates.h  cprtypes.h  curlinho.h  defaults.h  defines.h  error.h  hmac.h  parameters.h  response.h  session.h  sslcert.h  util.h
include/curlinho/encryption/: base64.h
src/: Curlinho.cpp  base64.cpp  certificates.cpp  defaults.cpp  error.cpp  parameters.cpp  session.cpp  util.cpp
test/: CMakeLists.txt
test/src/: TestCase-00.cpp
test/src/http/: TestcaseHTTPRetry.cpp
